# matamzom-v.4-22.11

./: main_test5.c
matamazom_project-v.4-22.11+/: CMakeLists.txt  amount_set.c  amount_set.h  main_test1.c  main_test2.c  main_test3.c  main_test4.c  main_test_from_FB.c  main_test_noaMatamazon.c  makefile.txt  matamazom(19.11sha).c  matamazom(19.11sha).h  matamazom.c  matamazom.h  order.c  order.h  product.c  product.h  temp_file.c
matamazom_project-v.4-22.11+/dir for makefile/: makefile
matamazom_project-v.4-22.11+/fb_tests/: printed_best_selling_safitest3.txt
matamazom_project-v.4-22.11+/self_tests/: main_test1.c  main_test2.c  main_test3.c  main_test4.c  main_test_from_FB.c  main_test_noaAmountSet.c  main_test_noaMatamazon.c
matamazom_project-v.4-22.11+/tests/: amount_set_main.c  matamazom_main.c  matamazom_tests.c  printed_filtered.txt  printed_no_selling.txt  printed_order.txt
